--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,10 +12,11 @@ h2 {
   color: white;
   text-align: center;
   margin-bottom: 2rem;
+  font-size: clamp(2rem, 4vw, 2rem);
 }
 
 p {
-  font-size: var(--size-xl);
+  font-size: clamp(1rem, 1.5vw, 2rem);
   color: lightgray;
 }
 
@@ -38,5 +39,5 @@ pre {
   background-color: var(--clr-secondary);
   padding: 0.25rem 0.5rem;
   border-radius: 0.125rem;
-  font-size: var(--size-lg);
+  font-size: clamp(0.875rem, 1vw, 1.25rem);
 }
